Card for article started in JS

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 </a>
                 <a class= "toBasket"><i class="fas fa-shopping-basket"></i></a>
             </header>
-            <main class= "content">
-                <div class= "article">
-                    <img id="article__img">
-                    <h2 id= "article__price"></h2>
-                    <p id= "article__descrptn"></p>
+            <main id= "content" class= "content">
+                <div id= article class= "article">
+                    <img class="article__img" id="article__img">
+                    <h2 class= "article__price" id= "article__price"></h2>
+                    <p class= "article__descrptn" id= "article__descrptn"></p>
                 </div>
             </main>
             <footer class= "foot">
