--- a/produit.html
+++ b/produit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Orinoco | Acceuil</title>
+        <title>Orinoco | Produit</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="description" content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !">
         <meta charset= "utf-8" />
@@ -18,6 +18,12 @@
                 <a class= "toBasket"><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
+                <div id="product" class="product">
+                    <img id="product__img" class="product__img">
+                    <h2 id="product__price" class="product__price"></h2>
+                    <h3 id="product__name" class="product__name"></h3>
+                    <p id="product__description" class="product__description"></p>
+                </div>
             </main>
             <footer class= "foot">
                 <p class= "copyright">@Maxime Lorin 2021</p>
