--- a/produit.html
+++ b/produit.html
@@ -28,8 +28,8 @@
                     </select>
                     <p id="product__description" class="product__description"></p>
                     <div class= "product__container">
-                        <input class="product__container__button--add" type="button" value="Ajouter au panier">
-                        <input class="product__container__button--buy" type="button" value="Acheter">
+                        <button id="product__container__button--add" class="product__container__button--add" type="button" name="panier">Ajouter au panier</button>
+                        <button id="product__container__button--buy" class="product__container__button--buy" type="button" name="acheter">Acheter</button>
                     </div>
                 </div>
             </main>
@@ -37,7 +37,7 @@
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
-
+        <script src="basket.js"></script>
         <script src="product.js"></script>
     </body>
 </html>
