--- a/panier.html
+++ b/panier.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Orinoco | Acceuil</title>
+        <title>Orinoco | Panier</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="description" content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !">
         <meta charset= "utf-8" />
@@ -9,7 +9,7 @@
         <script src="https://kit.fontawesome.com/4c2d4e0893.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class= "gridContainer">
+        <div class= "gridContainerProducts">
             <header class="head">
                 <a class="blockTitle" href= "/index.html">
                     <i class="fas fa-shopping-cart"></i>
@@ -18,12 +18,15 @@
                 <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
+                <div id="product" class="product">
+
+                </div>
             </main>
             <footer class= "foot">
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
-
-        <script src="index.js"></script>
+        <script src="basket.js"></script>
+        <script src="product.js"></script>
     </body>
 </html>
