--- a/produit.html
+++ b/produit.html
@@ -15,7 +15,7 @@
                     <i class="fas fa-shopping-cart"></i>
                     <h1 class= "mainTitle">Orinoco</h1>
                 </a>
-                <a class= "toBasket"><i class="fas fa-shopping-basket"></i></a>
+                <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
                 <div id="product" class="product">
