--- a/panier.html
+++ b/panier.html
@@ -18,8 +18,16 @@
                 <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
-                <div id="product" class="product">
-
+                <div id="basket" class="basket">
+                    <img id="basket__img">
+                    <div id="basket__quantity">
+                        <button id="basket__quantity--plus">+</button>
+                        <button id="basket__quantity--minus">-</button>
+                    </div>
+                    <div id="basket__descritption">
+                        <h2 id="basket__descritption--price"></h2>
+                        <h3 id="basket__descritption--name"></h3>
+                    </div>
                 </div>
             </main>
             <footer class= "foot">
@@ -27,6 +35,5 @@
             </footer>
         </div>
         <script src="basket.js"></script>
-        <script src="product.js"></script>
     </body>
 </html>
