Displaying product in basket is working

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
-
+        <script type="module" src="main.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
