--- a/panier.html
+++ b/panier.html
@@ -18,22 +18,12 @@
                 <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
-                <div id="basket" class="basket">
-                    <img id="basket__img">
-                    <div id="basket__quantity">
-                        <button id="basket__quantity--plus">+</button>
-                        <button id="basket__quantity--minus">-</button>
-                    </div>
-                    <div id="basket__descritption">
-                        <h2 id="basket__descritption--price"></h2>
-                        <h3 id="basket__descritption--name"></h3>
-                    </div>
-                </div>
             </main>
             <footer class= "foot">
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
+        <script type="module" src="main.js"></script>
         <script src="basket.js"></script>
     </body>
 </html>
