--- a/produit.html
+++ b/produit.html
@@ -37,6 +37,7 @@
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
+        <script type="module" src="main.js"></script>
         <script src="basket.js"></script>
         <script src="product.js"></script>
     </body>
