Add 404 page and post order

--- a/panier.html
+++ b/panier.html
@@ -18,12 +18,19 @@
                 <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
+                <div id="form">
+                    <input id="form__firstName" type="text">
+                    <input id="form__lastName" type="text">
+                    <input id="form__adress" type="text">
+                    <input id="form__city" type="text">
+                    <input id="form__email" type="text">
+                    <button id="form__button" type="button" name="acheter">Acheter</button>
+                </div>
             </main>
             <footer class= "foot">
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
-        <script type="module" src="main.js"></script>
         <script src="basket.js"></script>
     </body>
 </html>
