--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Orinoco | Acceuil</title>
+        <title>Orinoco | Ooops</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="description" content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !">
         <meta charset= "utf-8" />
@@ -18,12 +18,12 @@
                 <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
             </header>
             <main id= "content" class= "content">
+                <h2>Ooops la page que vous recherchez est introuvable.</h2>
             </main>
             <footer class= "foot">
                 <p class= "copyright">@Maxime Lorin 2021</p>
             </footer>
         </div>
-        <script src="index.js"></script>
         <script src="basket.js"></script>
     </body>
 </html>
