--- a/panier.html
+++ b/panier.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <title>Orinoco | Panier</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="description" content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !">
-        <meta charset= "utf-8" />
-        <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/4c2d4e0893.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class= "gridContainerProducts">
-            <header class="head">
-                <a class="blockTitle" href= "/index.html">
-                    <i class="fas fa-shopping-cart"></i>
-                    <h1 class= "mainTitle">Orinoco</h1>
-                </a>
-                <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
-            </header>
-            <main id= "content" class= "content">
-                <div id="form">
-                    <input id="form__firstName" type="text">
-                    <input id="form__lastName" type="text">
-                    <input id="form__adress" type="text">
-                    <input id="form__city" type="text">
-                    <input id="form__email" type="text">
-                    <button id="form__button" type="button" name="acheter">Acheter</button>
-                </div>
-            </main>
-            <footer class= "foot">
-                <p class= "copyright">@Maxime Lorin 2021</p>
-            </footer>
-        </div>
-        <script src="basket.js"></script>
-    </body>
+  <head>
+    <title>Orinoco | Panier</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !"
+    />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/4c2d4e0893.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="gridContainerProducts">
+      <header class="head">
+        <a class="blockTitle" href="/index.html">
+          <i class="fas fa-shopping-cart"></i>
+          <h1 class="mainTitle">Orinoco</h1>
+        </a>
+        <a class="toBasket" href="/panier.html"
+          ><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i
+        ></a>
+      </header>
+      <main id="content" class="content">
+        <form id="form">
+          <h3 class="form__title">Entrez vos coordonnées:</h3>
+          <input
+            id="form__firstName"
+            type="text"
+            placeholder="Prénom"
+            required
+          />
+          <input id="form__lastName" type="text" placeholder="Nom" required />
+          <input id="form__adress" type="text" placeholder="Adresse" required />
+          <input id="form__city" type="text" placeholder="Ville" required />
+          <input id="form__email" type="email" placeholder="E-mail" required />
+          <button id="form__button" type="submit" name="acheter">
+            Acheter
+          </button>
+        </form>
+      </main>
+      <footer class="foot">
+        <p class="copyright">@Maxime Lorin 2021</p>
+      </footer>
+    </div>
+    <script src="basket.js"></script>
+  </body>
 </html>
