Add quantity and price on basket

--- a/panier.html
+++ b/panier.html
@@ -26,6 +26,11 @@
         ></a>
       </header>
       <main id="content" class="content">
+        <div id="basketContainer"></div>
+        <div id="total">
+          <h3 id="total__text">Votre commande est de:</h3>
+          <h3 id="total__price"></h3>
+        </div>
         <form id="form">
           <h3 class="form__title">Entrez vos coordonnées:</h3>
           <input
