--- a/404.html
+++ b/404.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <title>Orinoco | Ooops</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="description" content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !">
-        <meta charset= "utf-8" />
-        <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/4c2d4e0893.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class= "gridContainer">
-            <header class="head">
-                <a class="blockTitle" href= "/index.html">
-                    <i class="fas fa-shopping-cart"></i>
-                    <h1 class= "mainTitle">Orinoco</h1>
-                </a>
-                <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
-            </header>
-            <main id= "content" class= "content">
-                <h2>Ooops la page que vous recherchez est introuvable.</h2>
-            </main>
-            <footer class= "foot">
-                <p class= "copyright">@Maxime Lorin 2021</p>
-            </footer>
-        </div>
-        <script src="basket.js"></script>
-    </body>
+  <head>
+    <title>Orinoco | Ooops</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !"
+    />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/4c2d4e0893.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="gridContainer">
+      <header class="head">
+        <a class="blockTitle" href="/index.html">
+          <i class="fas fa-shopping-cart"></i>
+          <h1 class="mainTitle">Orinoco</h1>
+        </a>
+        <a class="toBasket" href="/panier.html"
+          ><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i
+        ></a>
+      </header>
+      <main id="content" class="content">
+        <h2>Ooops la page que vous recherchez est introuvable.</h2>
+      </main>
+      <footer class="foot">
+        <p class="copyright">@Maxime Lorin 2021</p>
+      </footer>
+    </div>
+    <script src="/js/basket.js"></script>
+  </body>
 </html>
