--- a/commande-validee.html
+++ b/commande-validee.html
@@ -35,7 +35,7 @@
         <p class="copyright">@Maxime Lorin 2021</p>
       </footer>
     </div>
-    <script src="basket.js"></script>
-    <script src="validation.js"></script>
+    <script src="/js/basket.js"></script>
+    <script src="/js/validation.js"></script>
   </body>
 </html>
