--- a/panier.html
+++ b/panier.html
@@ -52,6 +52,6 @@
         <p class="copyright">@Maxime Lorin 2021</p>
       </footer>
     </div>
-    <script src="basket.js"></script>
+    <script src="/js/basket.js"></script>
   </body>
 </html>
