--- a/produit.html
+++ b/produit.html
@@ -1,43 +1,67 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <title>Orinoco | Produit</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="description" content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !">
-        <meta charset= "utf-8" />
-        <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/4c2d4e0893.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class= "gridContainerProducts">
-            <header class="head">
-                <a class="blockTitle" href= "/index.html">
-                    <i class="fas fa-shopping-cart"></i>
-                    <h1 class= "mainTitle">Orinoco</h1>
-                </a>
-                <a class= "toBasket" href="/panier.html"><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i></a>
-            </header>
-            <main id= "content" class= "content">
-                <div id="product" class="product">
-                    <img id="product__img" class="product__img">
-                    <h2 id="product__price" class="product__price"></h2>
-                    <h3 id="product__name" class="product__name"></h3>
-                    <label id="product__choose" for="lense-options">Choisissez un objectif:</label>
-                    <select name="options" id="product__select" class="product__select">
-                        <option value="">Choisissez ici</option>
-                    </select>
-                    <p id="product__description" class="product__description"></p>
-                    <div class= "product__container">
-                        <button id="product__container__button--add" class="product__container__button--add" type="button" name="panier">Ajouter au panier</button>
-                        <button id="product__container__button--buy" class="product__container__button--buy" type="button" name="acheter">Acheter</button>
-                    </div>
-                </div>
-            </main>
-            <footer class= "foot">
-                <p class= "copyright">@Maxime Lorin 2021</p>
-            </footer>
+  <head>
+    <title>Orinoco | Produit</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Orinoco le spécialiste de la photographie vintage, venez acheter un appareil photo d'époque !"
+    />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/4c2d4e0893.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="gridContainerProducts">
+      <header class="head">
+        <a class="blockTitle" href="/index.html">
+          <i class="fas fa-shopping-cart"></i>
+          <h1 class="mainTitle">Orinoco</h1>
+        </a>
+        <a class="toBasket" href="/panier.html"
+          ><span id="basketNumber"></span><i class="fas fa-shopping-basket"></i
+        ></a>
+      </header>
+      <main id="content" class="content">
+        <div id="product" class="product">
+          <img id="product__img" class="product__img" />
+          <h2 id="product__price" class="product__price"></h2>
+          <h3 id="product__name" class="product__name"></h3>
+          <label id="product__choose" for="lense-options"
+            >Choisissez un objectif:</label
+          >
+          <select name="options" id="product__select" class="product__select">
+            <option value="">Choisissez ici</option>
+          </select>
+          <p id="product__description" class="product__description"></p>
+          <div class="product__container">
+            <button
+              id="product__container__button--add"
+              class="product__container__button--add"
+              type="button"
+              name="panier"
+            >
+              Ajouter au panier
+            </button>
+            <button
+              id="product__container__button--buy"
+              class="product__container__button--buy"
+              type="button"
+              name="acheter"
+            >
+              Acheter
+            </button>
+          </div>
         </div>
-        <script src="basket.js"></script>
-        <script src="product.js"></script>
-    </body>
+      </main>
+      <footer class="foot">
+        <p class="copyright">@Maxime Lorin 2021</p>
+      </footer>
+    </div>
+    <script src="/js/basket.js"></script>
+    <script src="/js/product.js"></script>
+  </body>
 </html>
