--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         ></a>
       </header>
       <main id="content" class="content">
-        <h2>Ooops la page que vous recherchez est introuvable.</h2>
+        <h2 class="p404">Ooops la page que vous recherchez est introuvable.</h2>
       </main>
       <footer class="foot">
         <p class="copyright">@Maxime Lorin 2021</p>
