--- a/commande-validee.html
+++ b/commande-validee.html
@@ -26,10 +26,14 @@
         ></a>
       </header>
       <main id="content" class="content">
-        <p id="order">
-          Votre commande <span id="order__id">0</span> pour un total de
-          <span id="order__price"></span> a bien été validée !
-        </p>
+        <div id="order">
+          <p>
+            Votre commande <span id="order__id"></span> pour un total de
+            <span id="order__price"></span> a bien été validée !
+          </p>
+          <br />
+          <a id="order__return" href="/index.html">Retourner à l'Acceuil</a>
+        </div>
       </main>
       <footer class="foot">
         <p class="copyright">@Maxime Lorin 2021</p>
