--- a/panier.html
+++ b/panier.html
@@ -15,7 +15,7 @@
     ></script>
   </head>
   <body>
-    <div class="gridContainerProducts">
+    <div class="gridContainerBasket">
       <header class="head">
         <a class="blockTitle" href="/index.html">
           <i class="fas fa-shopping-cart"></i>
