add direct buy button

--- a/produit.html
+++ b/produit.html
@@ -27,12 +27,15 @@
       </header>
       <main id="content" class="content">
         <div id="product" class="product">
-          <img id="product__img" class="product__img" />
+          <img
+            id="product__img"
+            class="product__img"
+            src="null"
+            alt="imageProduct"
+          />
           <h2 id="product__price" class="product__price"></h2>
           <h3 id="product__name" class="product__name"></h3>
-          <label id="product__choose" for="lense-options"
-            >Choisissez un objectif:</label
-          >
+          <label id="product__choose">Choisissez un objectif:</label>
           <select name="options" id="product__select" class="product__select">
             <option value="">Choisissez ici</option>
           </select>
